--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -134,6 +134,7 @@
         app:layout_constraintTop_toBottomOf="@+id/delivery_label" >
 
         <RadioButton
+            android:checked="true"
             android:id="@+id/sameday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
