--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -80,8 +80,8 @@
 
     <EditText
         android:id="@+id/phone_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="199dp"
+        android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:ems="10"
@@ -131,31 +131,40 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/delivery_label" >
+        app:layout_constraintTop_toBottomOf="@+id/delivery_label">
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/sameday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/same_day_messenger_service"
-            android:onClick = "onRadioButtonClicked"/>
+            android:checked="true"
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/same_day_messenger_service" />
 
         <RadioButton
             android:id="@+id/nextday"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_day_ground_delivery"
-            android:onClick = "onRadioButtonClicked"/>/>
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/next_day_ground_delivery" />
 
         <RadioButton
             android:id="@+id/pickup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pick_up"
-            android:onClick = "onRadioButtonClicked"/>/>
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/pick_up" />
     </RadioGroup>
 
+    <Spinner
+        android:id="@+id/label_spinner"
+        android:layout_width="133dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/address_text" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
